# LotrySol

./: package-lock.json  package.json  tsconfig.json
.next/: prerender-manifest.json  trace
.next/cache/: .rscinfo
.next/server/: server-reference-manifest.json  webpack-runtime.js
.next/server/app/_not-found/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @swc.js
.next/static/chunks/: app-pages-internals.js  webpack.js
.next/static/chunks/app/_not-found/: page.js
.next/static/webpack/: webpack.ae3be981c9b79814.hot-update.js
app/src/components/: ConnectWallet.tsx  LotteryCard.tsx  Navigation.tsx
app/src/pages/: _app.tsx  index.tsx
app/src/utils/: constants.ts
programs/lottery/: Cargo.toml  Xargo.toml
programs/lottery/src/: lottery.rs
tests/: lottery.ts
